<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.slides.HomeIssuesSlideFragment">

    <TextView
        android:id="@+id/slideTitle"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_margin="24dp"

        style="@style/AppSlideTitle"
        android:textAlignment="center"

        android:text="@string/home_reports_category_title"/>

    <LinearLayout
        android:id="@+id/issueList"

        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintTop_toBottomOf="@id/slideTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_margin="24dp"

        android:orientation="vertical"
        >

        <CheckBox
            android:id="@+id/houseConditionCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layoutDirection="rtl"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="@dimen/slide_content_bottom_padding"

            style="@style/AppSlideContent"

            android:background="@drawable/category_background"
            android:text="@string/house_status_report"/>

        <CheckBox
            android:id="@+id/disrepairCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layoutDirection="rtl"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="@dimen/slide_content_bottom_padding"

            style="@style/AppSlideContent"

            android:background="@drawable/category_background"
            android:text="@string/house_disrepair_report"/>

        <CheckBox
            android:id="@+id/barsCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layoutDirection="rtl"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="@dimen/slide_content_bottom_padding"

            style="@style/AppSlideContent"

            android:background="@drawable/category_background"
            android:text="@string/house_barred_report"/>

        <CheckBox
            android:id="@+id/brokenWindowCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layoutDirection="rtl"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="@dimen/slide_content_bottom_padding"

            style="@style/AppSlideContent"

            android:background="@drawable/category_background"
            android:text="@string/broken_window_report"/>

        <CheckBox
            android:id="@+id/abandonedCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layoutDirection="rtl"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="@dimen/slide_content_bottom_padding"

            style="@style/AppSlideContent"

            android:background="@drawable/category_background"
            android:text="@string/house_abandoned_report"/>

        <CheckBox
            android:id="@+id/forSaleCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layoutDirection="rtl"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="@dimen/slide_content_bottom_padding"

            style="@style/AppSlideContent"

            android:background="@drawable/category_background"
            android:text="@string/house_for_sale_report"/>

        <CheckBox
            android:id="@+id/renovationCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layoutDirection="rtl"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="@dimen/slide_content_bottom_padding"

            style="@style/AppSlideContent"

            android:background="@drawable/category_background"
            android:text="@string/house_renovation_report"/>

        <CheckBox
            android:id="@+id/solarCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layoutDirection="rtl"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="@dimen/slide_content_bottom_padding"

            style="@style/AppSlideContent"

            android:background="@drawable/category_background"
            android:text="@string/solar_adaptation_report"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>