<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.slides.EnvironmentalIssuesSlideFragment">

    <TextView
        android:id="@+id/slideTitle"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_margin="24dp"

        style="@style/AppSlideTitle"
        android:textAlignment="center"

        android:text="@string/environmental_reports_category_title"/>

    <LinearLayout
        android:id="@+id/issueList"

        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintTop_toBottomOf="@id/slideTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_margin="24dp"

        android:orientation="vertical"
        >

        <CheckBox
            android:id="@+id/standingWaterCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layoutDirection="rtl"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="4dp"

            android:background="@drawable/category_background"
            android:text="@string/standing_water_report"/>

        <CheckBox
            android:id="@+id/unusedGreenCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layoutDirection="rtl"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="4dp"

            android:background="@drawable/category_background"
            android:text="@string/unused_space_report"/>

        <CheckBox
            android:id="@+id/treeLossCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layoutDirection="rtl"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="4dp"

            android:background="@drawable/category_background"
            android:text="@string/tree_loss_report"/>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>